# dnd-soundboard

./: .gitignore  CMakeLists.txt  README.md  commands.py  keyboard_controller.py  play_sounds.py  shell.nix
apps/: .clang-format  CMakeLists.txt  key_monitor.cpp  key_monitor.h  sound_player.cpp
libs/: CMakeLists.txt  commands.cpp  commands.h  event_device.cpp  event_device.h  keystate.h  keystate.hpp  sample.cpp  sample.h
nix/: README.md  common-configuration.nix  dnd-soundboard-service.nix  dnd-soundboard.nix  dt-overlays-zero2w.nix  flake.nix  network-config.nix  sample-dir-network-disk.nix  sd-image.nix  shell.nix  soundboard-cpp.nix  soundboard-python.nix  testvm.nix  zero2w.nix
python/: commands.py  key_monitor.py  keyboard_controller.py  play_sounds.py  sound_player.py
tests/: CMakeLists.txt  test_command.cpp  test_command_queue.cpp  test_keystate.cpp
